@@ -64,6 +64,7 @@
             "App::Cmd::Tester::CaptureExternal" : "0",
             "File::Find" : "0",
             "File::pushd" : "1.00",
+            "Test::Deep" : "0.110",
             "Test::More" : "0.96",
             "parent" : "0"
          }
